[package]
name = "bazaar_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
twilight-model = "0.16.0"
twilight-http = "0.16.0"
twilight-cache-inmemory = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
salvo = "0.77.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3.31"
bytes = { version = "1", features = ["serde"] }
http-body-util = "0.1.3"
ed25519-dalek = "2"
hex = "0.4.3"
snafu = "0.8.5"
serde_json = "1.0.140"
log = "0.4.26"